--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,15 +11,67 @@
         tools:context=".MainActivity"
         tools:showIn="@layout/activity_main">
 
-        <com.udacity.LoadingButton
-            android:id="@+id/custom_button"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_margin="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/padding_normal"
+            android:paddingRight="@dimen/padding_normal"
+            app:layout_constraintBottom_toTopOf="@+id/loading_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+            <RadioButton
+                android:id="@+id/rb_glide"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_normal"
+                android:onClick="onRadioButtonClicked"
+                android:text="@string/glide"
+                android:textSize="@dimen/default_text_size" />
+
+            <RadioButton
+                android:id="@+id/rb_loadApp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_normal"
+                android:onClick="onRadioButtonClicked"
+                android:text="@string/loadApp"
+                android:textSize="@dimen/default_text_size" />
+
+            <RadioButton
+                android:id="@+id/rb_retrofit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onRadioButtonClicked"
+                android:text="@string/retrofit"
+                android:textSize="@dimen/default_text_size" />
+        </RadioGroup>
+
+        <com.udacity.LoadingButton
+            android:id="@+id/loading_button"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/loading_button_height"
+            android:layout_margin="@dimen/margin_normal"
+            app:buttonAnimColor="@color/colorPrimaryDark"
+            app:buttonColor="@color/colorPrimary"
+            app:buttonTextColor="@color/white"
+            app:circleAnimColor="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/image_view_height"
+            android:background="@color/colorPrimaryDark"
+            android:contentDescription="@string/image_content_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_cloud_download" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
