--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,10 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="padding_normal">16dp</dimen>
     <dimen name="margin_normal">16dp</dimen>
+    <dimen name="margin_large">32dp</dimen>
     <dimen name="loading_button_height">60dp</dimen>
+    <dimen name="ok_button_height">60dp</dimen>
     <dimen name="image_view_height">240dp</dimen>
     <dimen name="default_text_size">20sp</dimen>
+    <dimen name="button_text_size">24sp</dimen>
 </resources>
